# tinyrender

./: .gitignore  README.md
00_prepare/: CMakeLists.txt
01_points/: CMakeLists.txt  main.cpp
02_wireframe/: CMakeLists.txt  main.cpp
03_filledtriangle/: CMakeLists.txt  main.cpp
